Kleine tekst inlogpagina
Ik heb een kleine aanpassing gemaakt op de inlogpagina over de tekst om een account aan te maken.

--- a/pages/inlog.html
+++ b/pages/inlog.html
@@ -44,7 +44,7 @@
 		           <p>Verhalen geschikt voor elk device</p>
 		        </li>
 		        <li>
-		           <p>Beheer uw persoonlijke gegevens</p>
+		           <p>Overal en elk moment</p>
 		        </li>
 		    </ul>
 	        <button>Account aanmaken</button>
