overzicht zo goed als klaar
Alleen nog iconen toevoegen en klaar maken voor micro interacties

--- a/Index.html
+++ b/Index.html
@@ -55,22 +55,21 @@
 	</header>
 
 	<div class="container up">
-		<section>
+		<section class="uitgelicht">
 			<article>
 			<header>
 					<button>
-			          	70
+			          	29
 			        </button>
-					<h2>Aanbevolen voor jouw!</h2>
+					<h2>Blind</h2>
 					<picture>
-						<img src="images/paranioa.jpg" alt="">
+						<img src="images/blind.jpeg" alt="">
 					</picture>
 				</header>
 				<ul>
-		            <li>28 april 2011</li>
-		            <li>10 minuten</li>
+		            <li>15 minuten</li>
 		        </ul>
-		       	<p>Hier komt nog een mooie tekst voor onder de afbeelding.</p>
+		       	<p>Piepende remmen, bus 21 komt tot stilstand. De stem van de buschauffeur, naar mij gericht, zakelijk, niet vriendelijk, niet onvriendelijk…</p>
 		        <footer>
 		        <a href="">Lees nu</a>
 		        </footer>
@@ -149,18 +148,17 @@
 				<article>
 						<header>
 							<button>
-			          			50
+			          			12
 			          		</button>
-			        		<h3>Blind</h3>
+			        		<h3>Martin Bril</h3>
 			        			<picture>
-			          				<img src="images/paranioa.jpg" alt="">
+			          				<img src="images/martin-bril.jpg" alt="">
 			        			</picture>
 	        			</header>
 	        		<ul>
-	                	<li>28 april 2011</li>
-	                	<li>10 minuten</li>
+	                	<li>15 minuten</li>
 	                </ul>
-	        		<p>Hier komt nog een mooie tekst voor onder de afbeelding.</p>
+	        		<p>Centraal Station. Iedereen gaat er naartoe, niemand moet er zijn. Behalve om verder te reizen. Ik stap uit de bus...</p>
 	        		<footer>
 	        			<a href="">Lees nu</a>
 	        		</footer>
@@ -168,18 +166,17 @@
 				<article>
 					<header>
 						<button>
-		          			20
+		          			34
 		          		</button>
-		        		<h3>Martin Bril</h3>
+		        		<h3>Paranoia</h3>
 		        			<picture>
 		          				<img src="images/paranioa.jpg" alt="">
 		        			</picture>
 	        		</header>	
 	        		<ul>
-	                	<li>28 april 2011</li>
-	                	<li>10 minuten</li>
+	                	<li>20 minuten</li>
 	                </ul>
-	        		<p>Hier komt nog een mooie tekst voor onder de afbeelding.</p>
+	        		<p>Ik sluip de bus uit. Kop in de kraag. Ik maak me klein en duw m’n zoon vooruit. Hij slaapt. Eindelijk…</p>
 	        		<footer>
 	        		<a href="">Lees nu</a>
 	        		</footer>
@@ -187,18 +184,71 @@
 				<article>
 					<header>
 						<button>
-		          			10
+		          			9
 		          		</button>
-		        		<h3>Paranoia</h3>
+		        		<h3>Doof</h3>
 		        		<picture>
-		          			<img src="images/paranioa.jpg" alt="">
+		          			<img src="images/doof.jpeg" alt="">
 		        		</picture>
 	        		</header>
 	        		<ul>
-	                	<li>28 april 2011</li>
 	                	<li>10 minuten</li>
 	                </ul>
-	        		<p>Hier komt nog een mooie tekst voor onder de afbeelding.</p>
+	        		<p>De bus stopt. Mensen stappen uit. Heel voorzichtig kijk ik in de kinderwagen. Mijn zoon slaapt eindelijk. Ik had het kunnen…</p>
+	        		<footer>
+	        		<a href="">Lees nu</a>
+	        		</footer>
+				</article>
+				<article>
+					<header>
+						<button>
+		          			41
+		          		</button>
+		        		<h3>Hongerwinter</h3>
+		        		<picture>
+		          			<img src="images/hongerwinter.jpg" alt="">
+		        		</picture>
+	        		</header>
+	        		<ul>
+	                	<li>25 minuten</li>
+	                </ul>
+	        		<p>Mijn voeten en handen heb ik ingezwachteld tegen de kou. Kranten tegen m’n borst. Ik duw een handkar voort…</p>
+	        		<footer>
+	        		<a href="">Lees nu</a>
+	        		</footer>
+				</article>
+				<article>
+					<header>
+						<button>
+		          			23
+		          		</button>
+		        		<h3>Beroemd</h3>
+		        		<picture>
+		          			<img src="images/beroemd.jpg" alt="">
+		        		</picture>
+	        		</header>
+	        		<ul>
+	                	<li>15 minuten</li>
+	                </ul>
+	        		<p>Vlak voordat ik de bus uitstap bedank ik de buschauffeur via de spiegel voor zijn diensten. Hij zwaait joviaal terug…</p>
+	        		<footer>
+	        		<a href="">Lees nu</a>
+	        		</footer>
+				</article>
+				<article>
+					<header>
+						<button>
+		          			1
+		          		</button>
+		        		<h3>Bejaard</h3>
+		        		<picture>
+		          			<img src="images/bejaard.jpg" alt="">
+		        		</picture>
+	        		</header>
+	        		<ul>
+	                	<li>20 minuten</li>
+	                </ul>
+	        		<p>De chauffeur kijkt verveeld maar vooral ook licht geïrriteerd via zijn achteruitkijkspiegel toe hoe…</p>
 	        		<footer>
 	        		<a href="">Lees nu</a>
 	        		</footer>
