--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>99 verhalen</title>
 	<link rel="stylesheet" href="styles/style.css"/>
+	<link rel="stylesheet" href="../styles/ionicons.min.css"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -45,7 +46,6 @@
 		    </ul>
 		</div>
 	</nav>
-
 	<header>
 	
 	<picture>
@@ -257,7 +257,7 @@
 		</main>
 	</div>
 	<footer>
-		Nederlandse Spoorwegen 2017
+		© Nederlandse Spoorwegen 2017
 	</footer>
 </body>
 </html>
