--- a/pages/inlog.html
+++ b/pages/inlog.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>99 verhalen</title>
 	<link rel="stylesheet" href="../styles/style-inlog.css"/>
+	<link rel="stylesheet" href="../styles/ionicons.min.css"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -48,42 +49,44 @@
 
 	<main>
 		<div class="container">
-		<article>
-			<h2> Welkom bij uw NS 99 verhalen account. </h2>
-			<form>
-	        	<fieldset>
-	          		<legend>Inloggen</legend>
-		            <label for="email">E-mailadres</label>
-		           	<input type="text" id="email" name="email" required="">
-	            	<label for="password">Wachtwoord</label>
-	            	<input type="password" id="password" name="password" required="" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}">
-	            	<button>Inloggen</button>
-	          		<button>Wachtwoord vergeten?</button>
-	        	</fieldset>
-	      	</form>
-		</article>
-	    <article>
-	        <h2>99 verhalen account aanmaken</h2>
-		    <ul>
-		        <li>
-		           <p>Lees uw favoriete verhalen</p>
-		        </li>
-		        <li>
-		           <p>Lees waar en waneer u wil</p>
-		        </li>
-		        <li>
-		           <p>Verhalen geschikt voor elk device</p>
-		        </li>
-		        <li>
-		           <p>Deel verhalen met uw vrienden</p>
-		        </li>
-		    </ul>
-	        <a href="#">Account aanmaken</a>
-	    </article>	
+			<section class="login">
+				<h2> Welkom bij uw NS 99 verhalen account. </h2>
+					<article>
+						<form>
+				        	<fieldset>
+				          		<legend>Inloggen</legend>
+					            <label for="email">E-mailadres</label>
+					           	<input type="text" id="email" name="email" required="">
+				            	<label for="password">Wachtwoord</label>
+				            	<input type="password" id="password" name="password" required="" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}">
+				            	<a href="#">Inloggen<i class="ion-ios-arrow-right"></i></a>
+				          		<a href="#">Wachtwoord vergeten?</a>
+				        	</fieldset>
+				      	</form>
+			      	</article>
+			      	<article>
+			        <h2>99 verhalen account aanmaken</h2>
+				    <ul>
+				        <li>
+				           Lees uw favoriete verhalen
+				        </li>
+				        <li>
+				           Lees waar en waneer u wil
+				        </li>
+				        <li>
+				           Verhalen geschikt voor elk device
+				        </li>
+				        <li>
+				           Deel verhalen met uw vrienden
+				        </li>
+				    </ul>
+				    <p><a href="#">Account aanmaken <i class="ion-ios-arrow-right"></i></a></p>
+		        </article>
+		    </section>	
 	    </div>
 	</main>
 	<footer>
-		<p>© 2017 Nederlandse Spoorwegen.</p>
+		© 2017 Nederlandse Spoorwegen.
 	</footer>
 </body>
 </html>
