--- a/Index.html
+++ b/Index.html
@@ -66,13 +66,15 @@
 						<img src="images/blind.jpeg" alt="">
 					</picture>
 				</header>
-				<ul>
-		            <li>15 minuten</li>
-		        </ul>
-		       	<p>Piepende remmen, bus 21 komt tot stilstand. De stem van de buschauffeur, naar mij gericht, zakelijk, niet vriendelijk, niet onvriendelijk…</p>
-		        <footer>
-		        <a href="">Lees nu</a>
-		        </footer>
+				<div class="col-50">
+					<ul>
+			            <li>15 minuten</li>
+			        </ul>
+			       	<p>Piepende remmen, bus 21 komt tot stilstand. De stem van de buschauffeur, naar mij gericht, zakelijk, niet vriendelijk, niet onvriendelijk…</p>
+			        <footer>
+			        <a href="">Lees nu</a>
+			        </footer>
+			    </div>
 		    </article>
 		</section>
 		
