--- a/Index.html
+++ b/Index.html
@@ -72,7 +72,7 @@
 			        </ul>
 			       	<p>Piepende remmen, bus 21 komt tot stilstand. De stem van de buschauffeur, naar mij gericht, zakelijk, niet vriendelijk, niet onvriendelijk…</p>
 			        <footer>
-			        <a href="">Lees nu</a>
+			        <a href="pages/blind.html">Lees nu</a>
 			        </footer>
 			    </div>
 		    </article>
@@ -162,7 +162,7 @@
 	                </ul>
 	        		<p>Centraal Station. Iedereen gaat er naartoe, niemand moet er zijn. Behalve om verder te reizen. Ik stap uit de bus...</p>
 	        		<footer>
-	        			<a href="">Lees nu</a>
+	        			<a href="pages/martin-bril.html">Lees nu</a>
 	        		</footer>
 				</article>
 				<article>
@@ -180,7 +180,7 @@
 	                </ul>
 	        		<p>Ik sluip de bus uit. Kop in de kraag. Ik maak me klein en duw m’n zoon vooruit. Hij slaapt. Eindelijk…</p>
 	        		<footer>
-	        		<a href="">Lees nu</a>
+	        		<a href="pages/paranoia.html">Lees nu</a>
 	        		</footer>
 				</article>
 				<article>
