Laatste puntjes op de i
Pijltjes toegevoegd, valid toegevoegd in de inlogpagina, bronvermelding bij javascript.

--- a/Index.html
+++ b/Index.html
@@ -70,9 +70,9 @@
 					<ul>
 			            <li>15 minuten</li>
 			        </ul>
-			       	<p>Piepende remmen, bus 21 komt tot stilstand. De stem van de buschauffeur, naar mij gericht, zakelijk, niet vriendelijk, niet onvriendelijk…</p>
+			       	<p>Piepende remmen, bus 21 komt tot stilstand. De stem van de buschauffeur, naar mij gericht, zakelijk, niet vriendelijk, niet onvriendelijk... </p>
 			        <footer>
-			        <a href="pages/blind.html">Lees nu</a>
+			        <a href="pages/blind.html"><i class="ion-ios-arrow-right"></i>Lees nu</a>
 			        </footer>
 			    </div>
 		    </article>
@@ -162,7 +162,7 @@
 	                </ul>
 	        		<p>Centraal Station. Iedereen gaat er naartoe, niemand moet er zijn. Behalve om verder te reizen. Ik stap uit de bus...</p>
 	        		<footer>
-	        			<a href="pages/martin-bril.html">Lees nu</a>
+	        			<a href="pages/martin-bril.html"><i class="ion-ios-arrow-right"></i> Lees nu</a>
 	        		</footer>
 				</article>
 				<article>
@@ -180,7 +180,7 @@
 	                </ul>
 	        		<p>Ik sluip de bus uit. Kop in de kraag. Ik maak me klein en duw m’n zoon vooruit. Hij slaapt. Eindelijk…</p>
 	        		<footer>
-	        		<a href="pages/paranoia.html">Lees nu</a>
+	        		<a href="pages/paranoia.html"><i class="ion-ios-arrow-right"></i> Lees nu</a>
 	        		</footer>
 				</article>
 				<article>
@@ -198,7 +198,7 @@
 	                </ul>
 	        		<p>De bus stopt. Mensen stappen uit. Heel voorzichtig kijk ik in de kinderwagen. Mijn zoon slaapt eindelijk. Ik had het kunnen…</p>
 	        		<footer>
-	        		<a href="">Lees nu</a>
+	        		<a href=""><i class="ion-ios-arrow-right"></i>Lees nu</a>
 	        		</footer>
 				</article>
 				<article>
@@ -216,7 +216,7 @@
 	                </ul>
 	        		<p>Mijn voeten en handen heb ik ingezwachteld tegen de kou. Kranten tegen m’n borst. Ik duw een handkar voort…</p>
 	        		<footer>
-	        		<a href="">Lees nu</a>
+	        		<a href=""> <i class="ion-ios-arrow-right"></i>Lees nu</a>
 	        		</footer>
 				</article>
 				<article>
@@ -234,7 +234,7 @@
 	                </ul>
 	        		<p>Vlak voordat ik de bus uitstap bedank ik de buschauffeur via de spiegel voor zijn diensten. Hij zwaait joviaal terug…</p>
 	        		<footer>
-	        		<a href="">Lees nu</a>
+	        		<a href=""><i class="ion-ios-arrow-right"></i>Lees nu</a>
 	        		</footer>
 				</article>
 				<article>
@@ -252,7 +252,7 @@
 	                </ul>
 	        		<p>De chauffeur kijkt verveeld maar vooral ook licht geïrriteerd via zijn achteruitkijkspiegel toe hoe…</p>
 	        		<footer>
-	        		<a href="">Lees nu</a>
+	        		<a href=""><i class="ion-ios-arrow-right"></i>Lees nu</a>
 	        		</footer>
 				</article>
 			</section>	
