--- a/pages/inlog.html
+++ b/pages/inlog.html
@@ -11,7 +11,7 @@
 	<nav>
 		<div class="container">
 			<section>
-				<a href="Index.html" title="NS">
+				<a href="../Index.html" title="NS">
 					<img src="../images/icons/nslogo.svg" alt="NS logo"><h1> Verhalen </h1>
 				</a>
 			</section>
@@ -56,9 +56,9 @@
 				        	<fieldset>
 				          		<legend>Inloggen</legend>
 					            <label for="email">E-mailadres</label>
-					           	<input type="text" id="email" name="email" required="">
+					           	<input type="email" id="email" name="email" required="">
 				            	<label for="password">Wachtwoord</label>
-				            	<input type="password" id="password" name="password" required="" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}">
+				            	<input type="password" id="password" name="password" required="">
 				            	<a href="#">Inloggen<i class="ion-ios-arrow-right"></i></a>
 				          		<a href="#">Wachtwoord vergeten?</a>
 				        	</fieldset>
