Laatste puntjes op de i

--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
         			</form>
 		        </li>
 		        <li>
-		           <a href="pages/leeslijst.html" title="Leeslijst">
+		           <a href="Index.html" title="Leeslijst">
 		           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="1.2em" height="1.2em" viewBox="0 0 20 20" enable-background="new 0 0 20 20" xml:space="preserve">
             <g transform="translate(0,-952.36218)">
               <path d="M5.582,952.362c-1.723,0-3.133,0.828-4.091,1.984C0.532,955.504,0,956.983,0,958.364c0,2.867,1.472,5.543,3.401,7.9
@@ -37,7 +37,7 @@
         c0-1.1,0.443-2.379,1.25-3.353C2.988,954.037,4.134,953.362,5.582,953.362z"></path>
             </g>
           </svg>
-						<span>Leeslijst</span></a>
+						<div class="notification"><p>0</p></div><span>Leeslijst</span></a>
 		        </li>
 		        <li>
 		           <a href="pages/inlog.html" title="Inloggen"><svg width="2em" height="2em" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"  width="35px" height="35px" viewBox="0 0 35 35" enable-background="new 0 0 35 35" xml:space="preserve"><g> <g>  <g>   <path d="M17.5,18c-2.2,0-4-2-4-4.5v-1c0-2.5,1.8-4.5,4-4.5s4,2,4,4.5v1C21.5,16,19.7,18,17.5,18z M17.5,9c-1.7,0-3,1.6-3,3.5v1    c0,1.9,1.3,3.5,3,3.5s3-1.6,3-3.5v-1C20.5,10.6,19.2,9,17.5,9z"/>  </g> </g> <g>  <g>   <path d="M18,27H9v-3c0-2.4,2-5.2,4.5-5.2c0.3,0,0.5,0.2,0.5,0.5s-0.2,0.5-0.5,0.5c-1.9,0-3.5,2.3-3.5,4.2v2h8    c0.3,0,0.5,0.2,0.5,0.5S18.3,27,18,27z"/>  </g> </g> <g>  <g>   <path d="M26,27h-9c-0.3,0-0.5-0.2-0.5-0.5S16.7,26,17,26h8v-2c0-1.9-1.6-4.2-3.5-4.2c-0.3,0-0.5-0.2-0.5-0.5s0.2-0.5,0.5-0.5    c2.5,0,4.5,2.8,4.5,5.2V27z"/>  </g> </g></g><style type="text/css">circle, ellipse, line, path, polygon, polyline, rect, text { fill: #003082; }</style></svg><span>Inloggen</span></a>
@@ -58,8 +58,8 @@
 		<section class="uitgelicht">
 			<article>
 			<header>
-					<button>
-			          	29
+					<button class="heart_btn">
+			          	<span>29</span>
 			        </button>
 					<h2>Blind</h2>
 					<picture>
@@ -72,7 +72,7 @@
 			        </ul>
 			       	<p>Piepende remmen, bus 21 komt tot stilstand. De stem van de buschauffeur, naar mij gericht, zakelijk, niet vriendelijk, niet onvriendelijk... </p>
 			        <footer>
-			        <a href="pages/blind.html"><i class="ion-ios-arrow-right"></i>Lees nu</a>
+			        <a href="pages/blind.html"><i class="ion-ios-arrow-right"></i> Lees nu</a>
 			        </footer>
 			    </div>
 		    </article>
@@ -150,7 +150,7 @@
 				<article>
 						<header>
 							<button class="heart_btn">
-			          			12
+			          			<span>12</span>
 			          		</button>
 			        		<h3>Martin Bril</h3>
 			        			<picture>
@@ -160,7 +160,7 @@
 	        		<ul>
 	                	<li>15 minuten</li>
 	                </ul>
-	        		<p>Centraal Station. Iedereen gaat er naartoe, niemand moet er zijn. Behalve om verder te reizen. Ik stap uit de bus...</p>
+	        		<p>Centraal Station. Iedereen gaat er naartoe, niemand moet er zijn. Behalve om verder te reizen. Ik stap...</p>
 	        		<footer>
 	        			<a href="pages/martin-bril.html"><i class="ion-ios-arrow-right"></i> Lees nu</a>
 	        		</footer>
@@ -168,7 +168,7 @@
 				<article>
 					<header>
 						<button class="heart_btn">
-		          			34
+		          			<span>34</span>
 		          		</button>
 		        		<h3>Paranoia</h3>
 		        			<picture>
@@ -178,7 +178,7 @@
 	        		<ul>
 	                	<li>20 minuten</li>
 	                </ul>
-	        		<p>Ik sluip de bus uit. Kop in de kraag. Ik maak me klein en duw m’n zoon vooruit. Hij slaapt. Eindelijk…</p>
+	        		<p>Ik sluip de bus uit. Kop in de kraag. Ik maak me klein en duw m’n zoon vooruit. Hij slaapt. Eindelijk...</p>
 	        		<footer>
 	        		<a href="pages/paranoia.html"><i class="ion-ios-arrow-right"></i> Lees nu</a>
 	        		</footer>
@@ -186,25 +186,25 @@
 				<article>
 					<header>
 						<button class="heart_btn">
-		          			9
+		          			<span>9</span>
 		          		</button>
 		        		<h3>Doof</h3>
 		        		<picture>
-		          			<img src="images/doof.jpeg" alt="">
+		          			<img src="images/doof.jpg" alt="">
 		        		</picture>
 	        		</header>
 	        		<ul>
 	                	<li>10 minuten</li>
 	                </ul>
-	        		<p>De bus stopt. Mensen stappen uit. Heel voorzichtig kijk ik in de kinderwagen. Mijn zoon slaapt eindelijk. Ik had het kunnen…</p>
+	        		<p>De bus stopt. Mensen stappen uit. Heel voorzichtig kijk ik in de kinderwagen. Mijn zoon slaapt eindelijk...</p>
 	        		<footer>
-	        		<a href=""><i class="ion-ios-arrow-right"></i>Lees nu</a>
+	        		<a href=""><i class="ion-ios-arrow-right"></i> Lees nu</a>
 	        		</footer>
 				</article>
 				<article>
 					<header>
 						<button class="heart_btn">
-		          			41
+		          			<span>41</span>
 		          		</button>
 		        		<h3>Hongerwinter</h3>
 		        		<picture>
@@ -214,15 +214,15 @@
 	        		<ul>
 	                	<li>25 minuten</li>
 	                </ul>
-	        		<p>Mijn voeten en handen heb ik ingezwachteld tegen de kou. Kranten tegen m’n borst. Ik duw een handkar voort…</p>
+	        		<p>Mijn voeten en handen heb ik ingezwachteld tegen de kou. Kranten tegen m’n borst. Ik duw een handkar…</p>
 	        		<footer>
-	        		<a href=""> <i class="ion-ios-arrow-right"></i>Lees nu</a>
+	        		<a href=""> <i class="ion-ios-arrow-right"></i> Lees nu</a>
 	        		</footer>
 				</article>
 				<article>
 					<header>
 						<button class="heart_btn">
-		          			23
+		          			<span>23</span>
 		          		</button>
 		        		<h3>Beroemd</h3>
 		        		<picture>
@@ -232,15 +232,15 @@
 	        		<ul>
 	                	<li>15 minuten</li>
 	                </ul>
-	        		<p>Vlak voordat ik de bus uitstap bedank ik de buschauffeur via de spiegel voor zijn diensten. Hij zwaait joviaal terug…</p>
+	        		<p>Vlak voordat ik de bus uitstap bedank ik de buschauffeur via de spiegel voor zijn diensten. Hij zwaait...</p>
 	        		<footer>
-	        		<a href=""><i class="ion-ios-arrow-right"></i>Lees nu</a>
+	        		<a href=""><i class="ion-ios-arrow-right"></i> Lees nu</a>
 	        		</footer>
 				</article>
 				<article>
 					<header>
 						<button class="heart_btn">
-		          			1
+		          			<span>1</span>
 		          		</button>
 		        		<h3>Bejaard</h3>
 		        		<picture>
@@ -250,9 +250,9 @@
 	        		<ul>
 	                	<li>20 minuten</li>
 	                </ul>
-	        		<p>De chauffeur kijkt verveeld maar vooral ook licht geïrriteerd via zijn achteruitkijkspiegel toe hoe…</p>
+	        		<p>De chauffeur kijkt verveeld maar vooral ook licht geïrriteerd via zijn achteruitkijkspiegel toe hoe...</p>
 	        		<footer>
-	        		<a href=""><i class="ion-ios-arrow-right"></i>Lees nu</a>
+	        		<a href=""><i class="ion-ios-arrow-right"></i> Lees nu</a>
 	        		</footer>
 				</article>
 			</section>	
