--- a/pages/inlog.html
+++ b/pages/inlog.html
@@ -59,7 +59,7 @@
 					           	<input type="email" id="email" name="email" required="">
 				            	<label for="password">Wachtwoord</label>
 				            	<input type="password" id="password" name="password" required="">
-				            	<a href="#">Inloggen<i class="ion-ios-arrow-right"></i></a>
+				            	<a href="../Index.html">Inloggen<i class="ion-ios-arrow-right"></i></a>
 				          		<a href="#">Wachtwoord vergeten?</a>
 				        	</fieldset>
 				      	</form>
